add function upload image and relace old image
