# output/swagger-output.json
@@ -2,17 +2,10 @@
   "openapi": "3.1.0",
   "info": {
     "version": "3.1.0",
+    "author": "@thnhan2",
     "title": "Food Service API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "servers": [
-    {
-      "url": "http://localhost:3000/"
-    },
-    {
-      "url": "https://localhost:3000/"
-    }
-  ],
   "tags": [
     {
       "name": "Categories",
@@ -20,16 +13,6 @@
     }
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/categories/": {
       "get": {
         "description": "",
@@ -39,6 +22,31 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -122,7 +130,33 @@
         }
       }
     },
-    "/api/foods/": {
+    "/api/categories/count/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/items/": {
       "get": {
         "description": "",
         "responses": {
@@ -164,9 +198,6 @@
                   },
                   "description": {
                     "example": "any"
-                  },
-                  "unit": {
-                    "example": "any"
                   }
                 }
               }
@@ -175,7 +206,7 @@
         }
       }
     },
-    "/api/foods/{id}": {
+    "/api/items/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -249,7 +280,7 @@
         }
       }
     },
-    "/api/foods/image/{id}": {
+    "/api/items/image/{id}": {
       "post": {
         "description": "",
         "parameters": [
